# treinamento-python-com-ia

./: .gitignore  EXERCICIOS.md  README.md  pyproject.toml  requirements.txt
scripts/: run_insight.py
src/: config.py
src/automation/: cli.py  logging_config.py
src/data_pipeline/: ingest.py  stats.py  transform.py
src/models_inference/: evaluation.py  inference.py
tests/: test_stats.py
